# django-exercise

./: README.md  pyproject.toml
mysite/: db.sqlite3  pyproject.toml
mysite/mysite/: settings.py  urls.py
mysite/tweets/: admin.py  models.py  serializers.py  urls.py  views.py
mysite/tweets/migrations/: 0001_initial.py  0002_initial.py
mysite/tweets/templates/: tweets.html
mysite/users/: admin.py  models.py  serializers.py  urls.py  views.py
mysite/users/migrations/: 0001_initial.py
